✨  Integrate Javelit to build dashboard + configure semantic release (#28)
:sparkles: :rocket: Init Javelit interface